# Qcar

./: CHANGELOG_INTEGRATION.md  CHANGELOG_PLAN_B.md  README.md  README_INTEGRATION.md  README_PLAN_B_CUSTOM_STACK.md  README_PLAN_B_GAZEBO_ALL_IN_ONE.md  README_PLAN_B_RUNNING_GAZEBO.md  README_QCAR2_PLAN_B_ALL_IN_ONE.md
install/: local_setup.sh  setup.sh
install/emergency_priority/lib/emergency_priority/: priority_mux_node  standin_lane_controller  v2x_fallback_node
install/emergency_priority/share/emergency_priority/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/emergency_priority/share/emergency_priority/config/: twist_mux.yaml
install/qcar2_description/share/qcar2_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/qcar2_description/share/qcar2_description/cmake/: qcar2_descriptionConfig-version.cmake  qcar2_descriptionConfig.cmake
install/qcar2_description/share/qcar2_description/config/: qcar2_ros_gz_bridge.yaml
install/qcar2_description/share/qcar2_description/environment/: ament_prefix_path.dsv  path.dsv
install/qcar2_description/share/qcar2_description/launch/: qcar2_bridge.launch.py  qcar2_state_publisher.launch.py  spawn_qcar2_planb.launch.py
install/qcar2_description/share/qcar2_description/meshes/: QCar2Body.stl  QCar2Lidar.stl  QCarSteeringHubL.stl  QCarSteeringHubR.stl  QCarWheel.stl
install/qcar2_description/share/qcar2_description/urdf/: QCar2_original.urdf  QCar2_planb.urdf
install/v2x_custom_stack/lib/v2x_custom_stack/: custom_costmap_node  custom_path_planner_node  polynomial_smoother_node  traffic_light_gate_node
install/v2x_custom_stack/share/v2x_custom_stack/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/v2x_custom_stack/share/v2x_custom_stack/config/: qcar_planb_ros_gz_bridge.yaml
install/v2x_custom_stack/share/v2x_custom_stack/launch/: plan_b_attach_to_running_gazebo.launch.py  plan_b_original_gazebo_full.launch.py  plan_b_qcar2_full_gazebo.launch.py  plan_b_qcar_world.launch.py  plan_b_with_gazebo.launch.py  qcar_planb_bridge.launch.py  spawn_qcar_planb.launch.py
install/v2x_custom_stack/share/v2x_custom_stack/maps/: eight_shape_road_map.pgm  eight_shape_road_map.yaml  simple_grid_map.pgm  simple_grid_map.yaml  traffic_light_grid_map.pgm  traffic_light_grid_map.yaml
install/v2x_custom_stack/share/v2x_custom_stack/worlds/: qcar2_simple_grid_world.sdf  simple_grid_world.sdf  traffic_light_grid_world.sdf
install/v2x_emergency/lib/v2x_emergency/: traffic_light_node  traffic_light_node.py  v2x_controller  v2x_controller.py  vehicle_node  vehicle_node.py
install/v2x_emergency/share/v2x_emergency/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/v2x_emergency/share/v2x_emergency/cmake/: ament_cmake_export_dependencies-extras.cmake  rosidl_cmake-extras.cmake  (+15 more)
install/v2x_mppi_lane_avoidance/lib/v2x_mppi_lane_avoidance/: mppi_path_follower
install/v2x_mppi_lane_avoidance/share/v2x_mppi_lane_avoidance/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/v2x_nav2_sim/share/v2x_nav2_sim/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/v2x_nav2_sim/share/v2x_nav2_sim/launch/: nav2_smac.launch.py
install/v2x_nav2_sim/share/v2x_nav2_sim/maps/: v2x_lab_map.yaml
install/v2x_nav2_sim/share/v2x_nav2_sim/models/qcar_simple/: model.config  model.sdf
install/v2x_opencv_perception/lib/v2x_opencv_perception/: lane_detection_node  lane_path_adapter_node
install/v2x_opencv_perception/share/v2x_opencv_perception/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/v2x_system_integration/share/v2x_system_integration/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
src/emergency_priority/: package.xml  setup.cfg  setup.py
src/emergency_priority/emergency_priority/: priority_mux_node.py  standin_lane_controller.py  v2x_fallback_node.py
src/emergency_priority/launch/: v2x_system.launch.py
src/qcar2_description/: CMakeLists.txt
src/qcar2_description/config/: qcar2_ros_gz_bridge.yaml
src/qcar2_description/launch/: qcar2_bridge.launch.py  qcar2_state_publisher.launch.py  spawn_qcar2_planb.launch.py
src/qcar2_description/meshes/: QCar2Body.stl  QCar2Lidar.stl  QCarSteeringHubR.stl  QCarWheel.stl
src/qcar2_description/models/qcar2_planb/: model.config  model.sdf
src/qcar2_description/urdf/: QCar2_original.urdf  QCar2_planb.urdf
src/v2x_custom_stack/: package.xml  setup.cfg  setup.py
src/v2x_custom_stack/launch/: plan_b_custom_stack.launch.py  plan_b_qcar2_nav2_replacement.launch.py
src/v2x_custom_stack/models/qcar_planb/: model.config  model.sdf
src/v2x_custom_stack/v2x_custom_stack/: common.py  traffic_light_gate_node.py
src/v2x_custom_stack/worlds/: eight_shape_road_world.sdf  qcar2_eight_shape_road_world.sdf  qcar2_traffic_light_grid_world.sdf
src/v2x_emergency/: CMakeLists.txt  README.md  package.xml
src/v2x_emergency/launch/: v2x_full_demo.launch.py  v2x_simulation.launch.py
src/v2x_emergency/msg/: PriorityGrant.msg  PriorityRequest.msg  SignalStatus.msg
src/v2x_emergency/scripts/: move_ambulance_gazebo.py
src/v2x_emergency/worlds/: v2x_world.sdf
src/v2x_mppi_lane_avoidance/: package.xml  setup.cfg  setup.py
src/v2x_mppi_lane_avoidance/v2x_mppi_lane_avoidance/: mppi_core.py
src/v2x_nav2_sim/: setup.py
src/v2x_nav2_sim/config/: nav2_smac_params.yaml  ros_gz_bridge.yaml
src/v2x_nav2_sim/launch/: full_nav2_gazebo.launch.py  gazebo_sim.launch.py  rviz.launch.py
src/v2x_nav2_sim/maps/: v2x_lab_map.pgm
src/v2x_nav2_sim/worlds/: v2x_lab_world.sdf
src/v2x_opencv_perception/: package.xml  setup.cfg  setup.py
src/v2x_opencv_perception/launch/: opencv_perception.launch.py
src/v2x_system_integration/: package.xml  setup.py
src/v2x_system_integration/launch/: integrated_v2x_nav2_mppi.launch.py
(+74 files in other folders)
