<?xml version="1.0"?>
<package format="3">
  <name>v2x_custom_stack</name>
  <version>0.1.0</version>
  <description>Plan B custom planner stack replacing Nav2 planning/control while keeping the same V2X, OpenCV, odom, scan and cmd_vel interfaces.</description>
  <maintainer email="student@example.com">V2X Team</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>builtin_interfaces</depend>

  <exec_depend>ros2launch</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>qcar2_description</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
