<?xml version="1.0"?>
<package format="3">
  <name>v2x_mppi_lane_avoidance</name>
  <version>0.1.0</version>
  <description>Polynomial MPPI path follower for the V2X Nav2 Gazebo stack.</description>
  <maintainer email="prathamesh@example.com">Prathamesh Sathe</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>

  <exec_depend>python3-numpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
