<?xml version="1.0"?>
<package format="3">
  <name>v2x_opencv_perception</name>
  <version>0.1.0</version>
  <description>OpenCV lane perception adapters for the V2X Nav2 MPPI stack. Publishes perception data only; it never commands /cmd_vel.</description>
  <maintainer email="prathamesh@example.com">Prathamesh Sathe</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>

  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-numpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
